k8s/test/ingress-service-local.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - staging.albertapp.codes
      secretName: tls-secret
  rules:
    - host: staging.albertapp.codes
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-clusterip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-clusterip
              servicePort: 5000
