k8s/test/ingress-service-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/cluster-issuer: "cluster-issuer"
spec:
  tls:
    - hosts:
        - test.catchypass.me
      secretName: tls-secret
  rules:
    - host: test.catchypass.me
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-clusterip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-clusterip
              servicePort: 5000
